--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class=org.postgresql.Driver
 spring.datasource.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.aop.proxy-target-class=true
